<resources>
    <string name="app_name">Weather</string>

    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="text_name_moscow">Москва</string>
    <string name="text_coordinates">lt/ln: 55.755826, 37.617299900000035</string>
    <string name="text_temperaturevalue">+15</string>
    <string name="text_feels_likevalue">-23</string>
    <string name="success">Success</string>

    <string name="clear">Ясно</string>
    <string name="partly_cloudy">Малооблачно</string>
    <string name="cloudy">Облачно с прояснениями</string>


    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="search_city_name">Москва, Красная площадь 1</string>
    <string name="search">search</string>

</resources>